--- a/src/blocks/cart/cart.pug
+++ b/src/blocks/cart/cart.pug
@@ -18,7 +18,7 @@ mixin cart(mods)
       }
     }
 
-  .cart(class=allMods)&attributes(attributes)
+  a.cart(class=allMods href="#")&attributes(attributes)
     .cart__inner
       .cart__icon-wrapper
         .cart__icon
