--- a/src/pug/layout-first-page.pug
+++ b/src/pug/layout-first-page.pug
@@ -37,7 +37,7 @@ html(class='index page no-js', lang='ru')
     noscript У вас отключен JavaScript. Это пугает.
 
     .off-canvas#off-canvas
-      aside.off-canvas__aside(role='complementary', aria-label='Меню')
+      aside.off-canvas__aside(role='complementary', aria-label='Меню' style='display: none')
         block off-canvas
       .off-canvas__overlay(data-toggle='off-canvas')
 
