--- a/src/scss/_tailwind-screens.scss
+++ b/src/scss/_tailwind-screens.scss
@@ -9,3 +9,5 @@ $screen-xxl: 1440px;
 $container-xxl: 1440px-64*2; 
 $screen-3xl: 1800px; 
 $container-3xl: 1800px-20*2; 
+$screen-4xl: 1921px; 
+$container-4xl: 1921px-20*2; 
