--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,3 +1,65 @@
+// //catalog test
+
+// .nav-tabs .nav-link.active {
+//   background-color: transparent;
+// }
+
+// .nav-link {
+//   color: red !important;
+// }
+
+// .product-card__img {
+//   background-color: transparent;
+//   outline: 1px solid red;
+
+
+//   img {
+//     opacity: 0;
+//   }
+// }
+
+// .catalog__actions * {
+//   color: red !important;
+// }
+
+// .product-card__top-item {
+//   background-color: transparent;
+//   outline: 1px solid red;
+// }
+
+// .product-card--catalog {
+//   border-color: red !important;
+// }
+
+// .product-card--info .product-card__inner {
+//   background-color: transparent;
+// }
+
+// .modal__container {
+//   background-color: transparent;
+//   outline: 1px solid red;
+
+//   * {
+//     color: red !important;
+//   }
+// }
+
+// .form-filter__item-wrapper {
+//   border-color: red !important;
+// }
+
+// .field-checkbox__name-text::before {
+//   border-color: red !important;
+// }
+
+// .field-text--price .field-text__input {
+//   background-color: transparent;
+//   outline: 1px solid red;
+// }
+
+//
+
+
 // .structure__img img {
 //   opacity: 0
 // }
