--- a/src/blocks/article-preview/article-preview.scss
+++ b/src/blocks/article-preview/article-preview.scss
@@ -21,8 +21,19 @@
   }
 
   &__list {
+
+
     @media (min-width: $items2-width) {
       display: flex;
+    }
+
+    @media (min-width: $screen-xxl) {
+      &.not-first-page {
+        .tns-slide-active {
+          width: 380px !important;
+        }
+      }
+
     }
   }
 
@@ -48,8 +59,16 @@
     height: 169px;
     overflow: hidden;
 
+    @media (min-width: 381px) {
+      height: 240px;
+    }
+
     @media (min-width: 480px) {
       height: 335px;
+    }
+
+    @media (min-width: $screen-xl) {
+      height: 380px;
     }
 
     @media (min-width: $screen-xxl) {
@@ -98,6 +117,9 @@
       padding-left: 40px;
     }
   }
+
+
+
 
 
 }
