--- a/src/blocks/breadcrumbs/breadcrumbs.scss
+++ b/src/blocks/breadcrumbs/breadcrumbs.scss
@@ -12,6 +12,11 @@
 
   @media (min-width: $screen-lg) {
     display: block;
+    margin-top: 30px;
+  }
+
+  @media (min-width: $screen-xxl) {
+    margin-top: 64px;
   }
 
   a {
@@ -27,14 +32,17 @@
 
   &__item {
     display: inline-block;
-    margin-right: 0.6em;
+    margin-right: 0.8em;
     white-space: nowrap;
 
     &:not(:last-child):after {
-      content: '>';
+      content: '/';
       display: inline-block;
-      margin-left: 0.8em;
+      margin-left: 0.9em;
       color: $gray;
     }
+  }
+
+  &__container {
   }
 }
