--- a/src/blocks/contacts/contacts.scss
+++ b/src/blocks/contacts/contacts.scss
@@ -70,4 +70,11 @@
     }
   }
 
+  &__main-contacts + div {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+  }
+
 }
