--- a/src/blocks/form-filter/form-filter.scss
+++ b/src/blocks/form-filter/form-filter.scss
@@ -9,6 +9,31 @@
   &__item-wrapper {
     padding: 25px 0;
     border-bottom: 1px solid $tw-gray-200;
+
+    &:last-child {
+      border-bottom: none;
+    }
+
+    @media (min-width: $screen-lg) {
+      padding: 18px 0;
+    }
+  }
+
+  &__item-info {
+    position: relative;
+    padding-right: 20px;
+    color: $tw-black;
+  }
+
+  &__item-info-tip {
+      position: absolute;
+      right: 0;
+      top: 0;
+    svg {
+      fill: none;
+      stroke: $tw-gray-300;
+    }
+
   }
 
   .field-toggler {
@@ -18,4 +43,26 @@
   .field-checkbox:first-child {
     margin-top: 14px;
   }
+
+  &__btn {
+    overflow: visible;
+  }
+
+  &__fields-wrapper {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-bottom: 10px;
+  }
+}
+
+
+.tippy-box[data-theme~='filter'] {
+  padding: 5px 10px;
+  color: $tw-black;
+  border-radius: 4px;
+  background-color: #fff;
+  @apply shadow-default;
 }
