--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -86,6 +86,7 @@
     top: -1770px; //animation page
     top: -47px; //contacts wide
     top: -6px; //contacts mobile
+    top: 0;
     // left: 64px;//footer main
     // top: -140px; //main test features
     // top: 32px; //mobile test features
@@ -93,7 +94,7 @@
     // top: -815px; //vacancies
     // top: -275px;
     //top: -5280px;
-    // content: url('../screens/catalog-mobile.png');
+    // content: url('../screens/catalog-page.jpg');
     opacity: 1;
   }
 
@@ -563,6 +564,7 @@ body {}
   }
 
   &__title {
+    margin-top: 0;
     font-size: 24px;
     line-height: 34px;
     color: $tw-black;
@@ -644,7 +646,27 @@ body {}
     }
   }
 
-  &--features {}
+  &--features {
+    .section__title {
+      padding-left: 20px;
+      padding-right: 20px;
+
+      @media (min-width: $screen-md) {
+        padding-left: 40px;
+        padding-right: 40px;
+      }
+
+      @media (min-width: $screen-lg) {
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+
+      @media (min-width: $screen-xl) {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+  }
 
 
 
@@ -701,6 +723,7 @@ body {}
     }
 
     .section__title {
+      margin-top: 0;
       @media (min-width: $onepage-width) {
         grid-row-start: 1;
         grid-row-end: 2;
