--- a/src/blocks/search-form/search-form.scss
+++ b/src/blocks/search-form/search-form.scss
@@ -35,20 +35,23 @@
     //
 
     @media (min-width: $screen-lg) {
-      width: 560px;
+      width: 660px;
     }
     @media (min-width: $screen-xl) {
-      width: 620px;
+      width: 720px;
     }
     @media (min-width: $screen-xxl) {
-      width: 700px;
+      width: 800px;
     }
     @media (min-width: $screen-3xl) {
-      width: 1050px;
+      width: 1170px;
     }
 
     #{$block-name}.active & {
-      max-width: 1100px;
+      max-width: 900px;
+      @media (min-width: $screen-3xl) {
+        max-width: 1200px;
+      }
     }
   }
 
