--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -34,7 +34,7 @@ block content
     +cart-aside(class='hidden xl_block')
     .main
       section.section.section-main.section--main-slider.bg-gray-100(data-page='main-slider' id='main-slider')
-        +slider-main({class: "3xl_container"})
+        +slider-main({class: "4xl_container"})
           +slider-item--main({url: '/video/dummy.mov', width: 1920, height: 1080, type: 'video/mp4', poster: 'poster_001.jpg'})
             .slider-main__text.mt-30px.lg_mt-0
               h2.mt-0.md_text-40px.lg_text-48px Современная физиотерапия и&nbsp;реабилитация
@@ -55,8 +55,11 @@ block content
                 +btn('Подробнее','regular')(href="#")
       section.section.section-main.section--features.mt-35px.lg_mt-0(data-page='features' id='features')
         .section__inner
-          .section__content.section__container.xl_container
-            +features
+          .section__content
+            .section__container.xl_container
+              .section__header
+                h2.section__title Почему РИКТА?
+            +features(class='section__container xl_container')
               +features-item({
                 title: 'Эффективность',
                 text: "<ul class='m-0 p-0 list-none'><li>Аппараты используются свыше чем 5&nbsp;000 ведущих клиник</li>" +
@@ -282,6 +285,11 @@ block content
                 +product-card(
                   {
                     url: './img/product.jpg',
+                    srcset:
+                    'img/product_320x200.jpg 320w,' +
+                    'img/product_345x242.jpg 345w,',
+                    sizes: '(max-width: 1023) 320px,' +
+                          '(min-width: 1024px) 345px,',
                     title: 'РИКТА-04/4',
                     desc: 'Без возрастных ограничений. С&nbsp;регулировкой мощности Без возрастных ограничений.<br/>С&nbsp;регулировкой мощности.',
                     price: '44 800 ₽'
@@ -289,6 +297,11 @@ block content
                 +product-card(
                   {
                     url: './img/product.jpg',
+                    srcset:
+                    'img/product_320x200.jpg 320w,' +
+                    'img/product_345x242.jpg 345w,',
+                    sizes: '(max-width: 1023) 320px,' +
+                          '(min-width: 1024px) 345px,',
                     title: 'РИКТА 04/4 (универсальный)',
                     desc: 'Комплектация: "Универсальный" Без возрастных ограничений. С&nbsp;регулировкой мощности',
                     price: '74 600 ₽'
@@ -296,6 +309,11 @@ block content
                 +product-card(
                   {
                     url: './img/product.jpg',
+                    srcset:
+                    'img/product_320x200.jpg 320w,' +
+                    'img/product_345x242.jpg 345w,',
+                    sizes: '(max-width: 1023) 320px,' +
+                          '(min-width: 1024px) 345px,',
                     title: 'рикта-эсмил(1)а',
                     desc: 'Портативный. Работает от аккумулятора Без возрастных ограничений. С&nbsp;регулировкой мощности',
                     price: '98 200 ₽'
@@ -303,6 +321,11 @@ block content
                 +product-card(
                   {
                     url: 'http://placekitten.com/300/300',
+                    srcset:
+                    'img/product_320x200.jpg 320w,' +
+                    'img/product_345x242.jpg 345w,',
+                    sizes: '(max-width: 1023) 320px,' +
+                          '(min-width: 1024px) 345px,',
                     title: 'рикта-тест',
                     desc: 'Без возрастных ограничений. С регулировкой мощности Без возрастных ограничений. С&nbsp; регулировкой мощности',
                     price: '98 200 ₽'
@@ -347,7 +370,15 @@ block content
                   .article-preview.slider__item.flex.xxl_w-736px
                     .article-preview__inner.xxl_flex.xxl_h-full
                       .article-preview__img.xxl_shrink-0(class="xxl_w-1/2 xxl_h-full")
-                        img.lazyload(data-src="img/article-1.jpg")
+                        picture
+                          source(media="(max-width: 380px)" data-srcset="img/article-1_338x169.jpg")
+                          source(media="(max-width: 440px)" data-srcset="img/article-1_437x240.jpg")
+                          source(media="(max-width: 699px)" data-srcset="img/article-1_657x550.jpg")
+                          source(media="(max-width: 1023px)" data-srcset="img/article-1_352x370.jpg")
+                          source(media="(max-width: 1279px)" data-srcset="img/article-1_480x335.jpg")
+                          source(media="(max-width: 1439px)" data-srcset="img/article-1_606x380.jpg")
+                          source(media="(min-width: 1440px)" data-srcset="img/article-1_600x742.jpg")
+                          img.lazyload(data-src="img/article-1.jpg")
                       .article-preview__text.xxl_pt-40px
                         .article-preview__date.text-base.text-gray-300.mb-10px.xxl_mb-10px 15 марта 2022
                         .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Лазерная терапия в комплексном лечении рожистого воспаления
@@ -357,23 +388,21 @@ block content
                   .article-preview.slider__item.xxl_w-397px
                     .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
                       .article-preview__img.xxl_shrink(class="xxl_h-[57%]")
-                        img.lazyload(data-src="img/article-2.jpg")
+                        picture
+                          source(media="(max-width: 380px)" data-srcset="img/article-1_338x169.jpg")
+                          source(media="(max-width: 440px)" data-srcset="img/article-1_437x240.jpg")
+                          source(media="(max-width: 699px)" data-srcset="img/article-1_657x550.jpg")
+                          source(media="(max-width: 1023px)" data-srcset="img/article-1_352x370.jpg")
+                          source(media="(max-width: 1279px)" data-srcset="img/article-1_480x335.jpg")
+                          source(media="(max-width: 1439px)" data-srcset="img/article-1_606x380.jpg")
+                          source(media="(min-width: 1440px)" data-srcset="img/article-1_600x742.jpg")
+                          img.lazyload(data-src="img/article-1.jpg")
                       .article-preview__text.xxl_pt-30px.xxl_shrink-0
                         .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
                         .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                         .article-preview__content.hidden
                         +btn('Подробнее','simple')(class="text-md mt-10px")
-                  .article-preview.slider__item.flex.xxl_w-736px
-                    .article-preview__inner.xxl_flex.xxl_h-full
-                      .article-preview__img.xxl_shrink-0(class="xxl_w-1/2 xxl_h-full")
-                        img.lazyload(data-src="img/article-1.jpg")
-                      .article-preview__text.xxl_pt-40px
-                        .article-preview__date.text-base.text-gray-300.mb-10px.xxl_mb-10px 15 марта 2022
-                        .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Лазерная терапия в комплексном лечении рожистого воспаления
-                        .article-preview__content.hidden.xxl_block.xxl_flex-grow.xxl_overflow-hidden.xxl_w-full.xxl_mb-30px
-                          .article-preview__content-inner.text-base.text-gray-500.max-h-full.article-preview__ellipsis.xl_pr-10px Рожистое воспаление, рожа (erysipelas – от греч. erythros «красный» и pella«кожа») – инфекционное заболевание, вызываемое бета-гемолитическим стрептококком группы А,  протекающее в острой или хронической форме. В России встречается 10-12 случаев на 10 000 населения. Рожей в основном страдают люди старше 60 лет, причем женщины болеют чаще мужчин.
-                        +btn('Подробнее','simple')(class="text-md mt-10px xxl_mt-20px")
-                  .article-preview.slider__item.xxl_w-397px
+                  .article-preview.slider__item.xxl_w-390px
                     .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
                       .article-preview__img.xxl_shrink(class="xxl_h-[57%]")
                         img.lazyload(data-src="img/article-2.jpg")
@@ -382,14 +411,15 @@ block content
                         .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                         .article-preview__content.hidden
                         +btn('Подробнее','simple')(class="text-md mt-10px")
-                //- .article-preview.slider__item
-                //-   .article-preview__img
-                //-     img(src="img/article-2.jpg")
-                //-   .article-preview__text
-                //-     .article-preview__date.text-base.mb-10px 15 марта 2022
-                //-     .article-preview__title.text-lg.text-black Поллиноз, Сенная Лихорадка, Аллергический Ринит?
-                //-     .article-preview__content
-                //-     +btn('Подробнее','simple')(class="text-md mt-10px")
+                  .article-preview.slider__item.xxl_w-390px
+                    .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
+                      .article-preview__img.xxl_shrink(class="xxl_h-[57%]")
+                        img.lazyload(data-src="img/article-2.jpg")
+                      .article-preview__text.xxl_pt-30px.xxl_shrink-0
+                        .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
+                        .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Поллиноз, Сенная Лихорадка, Аллергический Ринит?
+                        .article-preview__content.hidden
+                        +btn('Подробнее','simple')(class="text-md mt-10px")
       .section.page__footer-wrapper.mt-60px.lg_mt-0
         +page-footer()
           .page-footer__contacts.xxl_ml-60px.xxl_justify-self-end.xxl_mt-20px
@@ -397,14 +427,7 @@ block content
             .page-footer__hours.text-sm.text-gray-500 пн-пт 10:00 – 18:00
             .page-footer__address.mt-7px 111020, г. Москва, <br class="hidden xxl_block"/>ул. Боровая, д. 7, стр. 7.
             .page-footer__socials.flex.justify-between.mt-24px
-              +social-icon({icon: 'mail', url: 'mail.ru', w: '22', h: '19'})(class="page-footer__social-icon")
-              +social-icon({icon: 'youtube', url: 'mail.ru', w: '19', h: '16'})(class="page-footer__social-icon")
-              +social-icon({icon: 'fb', url: 'mail.ru', w: '17', h: '18'})(class="page-footer__social-icon")
-              +social-icon({icon: 'insta', url: 'mail.ru', w: '17', h: '18'})(class="page-footer__social-icon")
-              +social-icon({icon: 'vk', url: 'mail.ru', w: '22', h: '13'})(class="page-footer__social-icon")
-              +social-icon({icon: 'ok', url: 'mail.ru', w: '11', h: '18'})(class="page-footer__social-icon")
-              +social-icon({icon: 'tg', url: 'mail.ru', w: '18', h: '15'})(class="page-footer__social-icon")
-              +social-icon({icon: 'rutube', url: 'mail.ru', w: '57', h: '14'})(class="page-footer__social-icon")
+              <div class='ya-share2' data-curtain data-services='vkontakte,odnoklassniki,telegram,viber,whatsapp'></div>
           .page-footer__disclaim.xxl_mt-115px
             div.mt-12px.md_mt-0.text-15.xxl_text-2xl.opacity-30 ВСЯ ИНФОРМАЦИЯ, РАЗМЕЩЕННАЯ НА САЙТЕ, НОСИТ ОЗНАКОМИТЕЛЬНЫЙ ХАРАКТЕР И НЕ МОЖЕТ СЛУЖИТЬ ЗАМЕНОЙ ОЧНОЙ КОНСУЛЬТАЦИИ ВРАЧА
             div.mt-10px.xxl_mt-5px.text-base Вся представленная на сайте информация, касающаяся наличия на складе, стоимости товаров, носит информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса РФ.
@@ -455,6 +478,7 @@ block prepend page-bottom
   .inline-svg-sprite
     include ../blocks/sprite-svg-inline/img/sprite-inline.svg
   script(src='https://cdn.scaleflex.it/plugins/js-cloudimage-360-view/3.0.3/js-cloudimage-360-view.min.js')
+  script(src='https://yastatic.net/share2/share.js' defer)
   //- script
   //-   | (async () => {
   //-   |   await import('https://cdn.scaleflex.it/plugins/js-cloudimage-360-view/3.0.3/js-cloudimage-360-view.min.js')
